--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,20 +1,12 @@
-<script src="//code.jquery.com/jquery-3.0.0-alpha1.min.js"></script>
-<!---
-<script src="//jquery-element.github.io/jquery-element-1.7.0.js"></script>
-<script src="//jquery-element.github.io/joystick-2.0.0.js"></script>
---->
-<script src="static/joystick_elements.js"></script>
-<script src="static/joystick.js"></script>
-<script>
-$( function() {
+{% extends "layout.html" %}
+{% block content %}
+                <div align="center">
+                    <h1> Drone World </h1>
+                    <img width="90%" src="/static/img/drone.jpg">
+                </div>
 
-		$( ".joystick" ).element().init({
-			move:    function( x, y, rx, ry ) {},
-			hold:    function() {},
-			release: function() {}
-		});
-
-});
-</script>
-
-<div data-jquery-element="joystick"></div>
+                <ul data-role="listview">
+                    <li><a href="/controller/">Controller</a></li>
+                    <li><a href="/setting/">Setting</a></li>
+                </ul>
+{% endblock %}
