--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -1,15 +1,22 @@
-{% extends "layout.html" %}
+{% extends "layout2.html" %}
 {% block content %}
 <style>
     .controller-box{
         position:relative;
-        text-align: center;
+        text-align:center;
     }     
-
-    .controller-box .joystick_interface{
+    .joystick{
         position:absolute;
         left:5px;
         top:190px;
+        z-index:1;
+    }
+    #side_bar{
+        position:absolute;
+        top:-10px;
+        left:-3px;
+        z-index:1;
+        width:100%;
     }
 </style>
 <script src="../static/js/joystick_elements.js"></script>
@@ -31,12 +38,9 @@
         });
     });
 </script>
-<div class="controller-box">
-    <h1>Remote Controller</h1>
-</div>
 
 <div class="controller-box">
-    <div data-role="collapsibleset" data-filter="true" data-inset="true" id="collapsiblesetForFilter" data-input="#searchForCollapsibleSet" style="width: 130px;">
+    <div data-role="collapsibleset" id='side_bar' data-filter="true" data-inset="true" id="collapsiblesetForFilter" data-input="#searchForCollapsibleSet">
         <div data-role="collapsible">
             <h3>Side Bar</h3>
             <ul data-role="listview" data-inset="false">
@@ -48,7 +52,7 @@
     </div>
     <img src="../static/css/images/video_view.jpg" style="float:left; width:660px;height:300px;">
 
-    <div class="joystick_interface" style="display:flex; float:left;">
+    <div class="joystick_interface">
         <div data-jquery-element="joystick"></div>
     </div>
 </div>
