--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -1,57 +1,77 @@
-{% extends "layout.html" %}
-{% block content %}
-<style>
-    .controller-box{
-        position:relative;
-        text-align: center;
-    }     
+<html>
+    <head>
+        <title>Drone App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
+        <link rel="stylesheet" href="../static/css/jquery.mobile-1.4.5.min.css"/>
+        <script src="../static/js/jquery-3.0.0-alpha1.min.js"></script>
+        <script src="../static/js/joystick_elements.js"></script>
+        <script src="../static/js/joystick.js"></script>
+        <script src="../static/js/jquery-1.11.1.min.js"></script>
+        <script src="../static/js/jquery.mobile-1.4.5.min.js"></script>
+        <style>
+            .controller-box{
+                position:static;
+                text-align: center;
+                margin:0;
+                padding:0;
+            }     
+            .ui-content{
+                padding:0;
+            }
+            .video_view{
+                float:left; 
+                width:100%; 
+                height:100%;
+                margin:0;
+                padding:0;
+            }
+            #side_bar{
+                position:absolute;
+                top:-10px;
+                left:-3px;
+                z-index:1;
+                width:100%;
+            }
+            .joystick{
+                position:absolute;
+                left:5px;
+                bottom:30px;
+                z-index:1;
+            }
+        </style>
+    </head>
 
-    .controller-box .joystick_interface{
-        position:absolute;
-        left:5px;
-        top:190px;
-    }
-</style>
-<script src="../static/js/joystick_elements.js"></script>
-<script src="../static/js/joystick.js"></script>
-<script>
-    var sendCommand=(command,params={})=>{
-        console.log({action:'sendCommand',command:command,params:params})   
-        params['command']=command
-        $.post("/api/command/",params).done((json)=>{
-            console.log({action:'sendCommand',json:json})
-        },'json')
-    }
-
-    $( function() {
-        $( ".joystick" ).element().init({
-            move:    function( x, y, rx, ry ) {},
-            hold:    function() {},
-            release: function() {}
-        });
-    });
-</script>
-<div class="controller-box">
-    <h1>Remote Controller</h1>
-</div>
-
-<div class="controller-box">
-    <div data-role="collapsibleset" data-filter="true" data-inset="true" id="collapsiblesetForFilter" data-input="#searchForCollapsibleSet" style="width: 130px;">
-        <div data-role="collapsible">
-            <h3>Side Bar</h3>
-            <ul data-role="listview" data-inset="false">
-                <a href="#" data-role="button" onclick="sendCommand('takeOff'); return false">Take Off</a>
-                <a href="#" data-role="button" onclick="sendCommand('land'); return false">Land</a>
-                <a href="#" data-role="button" onclick="sendCommand('stop'); return false">Hover</a>
-            </ul>
+    <body>
+        <script>
+            var sendCommand=(command,params={})=>{
+                console.log({action:'sendCommand',command:command,params:params})   
+                params['command']=command
+                $.post("/api/command/",params).done((json)=>{
+                    console.log({action:'sendCommand',json:json})
+                },'json')
+            }
+            $( function() {
+                $( ".joystick" ).element().init({
+                    move:    function( x, y, rx, ry ) {},
+                    hold:    function() {},
+                    release: function() {}
+                });
+            });
+        </script> 
+        <div class="controller-box">
+            <div data-role="collapsibleset" data-filter="true" data-inset="true" id="collapsiblesetForFilter" data-input="#searchForCollapsibleSet" style="width:100%;height:0px;margin:0;">
+                <div data-role="collapsible">
+                    <h3>Side Bar</h3>
+                    <ul data-role="listview" data-inset="false">
+                        <a href="/" data-role="button">Home</a>
+                        <a href="#" data-role="button" onclick="sendCommand('takeOff'); return false">Take Off</a>
+                        <a href="#" data-role="button" onclick="sendCommand('land'); return false">Land</a>
+                        <a href="#" data-role="button" onclick="sendCommand('stop'); return false">Hover</a>
+                    </ul>
+                </div>
+            </div>
+            <img src="../static/css/images/video_view.jpg" class="video_view">
         </div>
-    </div>
-    <img src="../static/css/images/video_view.jpg" style="float:left; width:660px;height:300px;">
-
-    <div class="joystick_interface" style="display:flex; float:left;">
         <div data-jquery-element="joystick"></div>
-    </div>
-</div>
-
-
-{% endblock %}
+    </body>
+</html>
