--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,12 +1,29 @@
-{% extends "layout.html" %}
-{% block content %}
+<html>
+    <head>
+        <title>Drone App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../static/css/jquery.mobile-1.4.5.min.css" />
+        <script src="../static/js/jquery-1.11.1.min.js"></script>
+        <script src="../static/js/jquery.mobile-1.4.5.min.js"></script>
+    </head>
+    <body>
+        <div data-role="page">
+            <div data-role="header">
+                <a href="/" data-icon="home" data-dom-cache="false">Home</a>
+                <h1> Drone World </h1>
+            </div>
+
+            <div data-role="content">
                 <div align="center">
                     <h1> Drone World </h1>
                     <img width="90%" src="/static/img/drone.jpg">
                 </div>
 
                 <ul data-role="listview">
-                    <li><a href="/controller/">Controller</a></li>
+                    <li><a href="javascript:location.href='/controller'">Controller</a></li>
                     <li><a href="/setting/">Setting</a></li>
                 </ul>
-{% endblock %}
+            </div>
+        </div>
+    </body>
+</html>
