--- a/flask/templates/setting.html
+++ b/flask/templates/setting.html
@@ -1,37 +1,53 @@
-{% extends "layout.html" %}
-{% block content %}
-<style>
-    .setting-box{
-        position:relative;
-        text-align: center;
-    }   
-</style>
-<script>
-    var sendCommand=(command,params={})=>{
-        console.log({action:'sendCommand',command:command,params:params})   
-        params['command']=command
-        $.post("/api/command/",params).done((json)=>{
-            console.log({action:'sendCommand',json:json})
-        },'json')
-    }
+<html>
+    <head>
+        <title>Drone App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../static/css/jquery.mobile-1.4.5.min.css" />
+        <script src="../static/js/jquery-1.11.1.min.js"></script>
+        <script src="../static/js/jquery.mobile-1.4.5.min.js"></script>
+        <style>
+            .setting-box{
+                position:relative;
+                text-align: center;
+            }   
+        </style>
+        <script>
+            var sendCommand=(command,params={})=>{
+                console.log({action:'sendCommand',command:command,params:params})   
+                params['command']=command
+                $.post("/api/command/",params).done((json)=>{
+                    console.log({action:'sendCommand',json:json})
+                },'json')
+            }
+        
+            $(document).on('pageinit',(event)=>{
+                $('#slider-2').on("slidestop",()=>{
+                    let params={
+                        speed: $("#slider-2").val(),
+                    };
+                    sendCommand('speed',params)
+                })
+            })
+        </script>
+    </head>
+    <body>
+        <div data-role="page">
+            <div data-role="header">
+                <a href="/" data-icon="home" data-dom-cache="false">Home</a>
+                <h1> Drone World </h1>
+            </div>
 
-    $(document).on('pageinit',(event)=>{
-        $('#slider-2').on("slidestop",()=>{
-            let params={
-                speed: $("#slider-2").val(),
-            };
-            sendCommand('speed',params)
-        })
-    })
-</script>
-<div class="setting-box">
-    <h1>Settings</h1>
-</div>
-
-<form>
-    <div class="setting-box" style="text-align:left">
-        <h3>Drone Speed</h3>
-    </div>
-    <input type="range" name="slider-2" id="slider-2" data-highlight="true" min="0" max="20" value="10">
-</form>
-{% endblock %}
+            <div data-role="content">
+                <div class="setting-box">
+                    <h1>Settings</h1>
+                </div>
+                <form>
+                    <div class="setting-box" style="text-align:left">
+                        <h3>Drone Speed</h3>
+                    </div>
+                    <input type="range" name="slider-2" id="slider-2" data-highlight="true" min="0" max="20" value="10">
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
