--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -81,7 +81,7 @@
             </ul>
         </div>
     </div>
-    <img src="../static/css/images/video_view.jpg" style="float:left; width:660px;height:300px;">
+    <img src="../static/css/images/video_view.jpg" style="float:left; width:100%; height:100%;">
     <div class="joystick_interface">
         <div data-jquery-element="joystick"></div>
         <div data-jquery-element="joystick2"></div>
