--- a/flask/templates/about.html
+++ b/flask/templates/about.html
@@ -14,16 +14,7 @@
             </div>
 
             <div data-role="content">
-                <div align="center">
-                    <h1> Drone App </h1>
-                    <img width="90%" src="/static/img/drone.jpg">
-                </div>
-
-                <ul data-role="listview">
-                    <li><a href="javascript:location.href='/controller'">Controller</a></li>
-                    <li><a href="javascript:location.href='/setting'">Setting</a></li>
-                    <li><a href="javascript:location.href='/about'">About</a></li>
-                </ul>
+                <img src="../static/img/about.png" style="width:100%; height:100%;">
             </div>
         </div>
     </body>
