--- a/flask/templates/setting.html
+++ b/flask/templates/setting.html
@@ -34,7 +34,7 @@
         <div data-role="page">
             <div data-role="header">
                 <a href="/" data-icon="home" data-dom-cache="false">Home</a>
-                <h1> Drone World </h1>
+                <h1> Drone App </h1>
             </div>
 
             <div data-role="content">
