--- a/flask/templates/setting.html
+++ b/flask/templates/setting.html
@@ -55,6 +55,13 @@
                     <input type = "submit" value = "제출">
                 </form>    
             </div>
+            <div>
+                <form action="http://localhost:9999/setting/ap" method="post">
+                    SSID : <input type="text" name="SSID">
+                    Password : <input type="password" name="password">
+                    <input type="submit" value = "연결">
+                </form>
+            </div>
         </div>
     </body>
 </html>
