--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -75,7 +75,9 @@
             </ul>
         </div>
     </div>
-    <img src="/video/streaming" style="float:left; width:100%; height:100%; object-fit: cover;">
+    <div style="float:left; width:100%; height:350px;">
+        <img src="/video/streaming" style="float:left; width:100%; height:100%; object-fit: cover;">
+    </div>    
     <div class="joystick_interface">
         <div data-jquery-element="joystick"></div>
         <div data-jquery-element="joystick2"></div>
