--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -74,7 +74,7 @@
                     $(".Label").css("color","red").text(`${percent}%`);
                     $(".Energy").slice((percent/10)+1,10).addClass("on").css("background-color","gray");
                 }
-                hideLoadingBar()
+                hideLoadingBar();
             })
         </script>
         <style>
