--- a/flask/templates/about.html
+++ b/flask/templates/about.html
@@ -9,7 +9,7 @@
     <body>
         <div data-role="page">
             <div data-role="header">
-                <a href="javascript:location.href='/'" data-icon="home" data-dom-cache="false">Home</a>
+                <a href="/" data-icon="home" data-dom-cache="false">Home</a>
                 <h1> Drone App </h1>
             </div>
 
