--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -100,7 +100,7 @@
     <img id="drone_image" src="/video/streaming" style="float:left; width:100%; height:100%; object-fit: cover;">
     <div class="joystick_interface">
         <div data-jquery-element="joystick"></div>
-        <a class = "click_button" href="/video/snapshot" data-role="button" onclick="sendCommand('takeoff'); return false">촬영</a>
+        <a class = "click_button" href="/video/snapshot" data-role="button" onclick="return false">촬영</a>
         <div data-jquery-element="joystick2"></div>
     </body>
 </html>
