--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -22,6 +22,20 @@
             }
             $(()=>{
                 $.ajax({
+                    url:"/user_list",
+                    async:false
+                })
+                .done(function(data){
+                    var num=1
+                    var str=''
+                    for(id in data){
+                        str+=`<a href="#" data-role="button" class="ui-link ui-btn ui-shadow ui-corner-all" onclick="return false">${num}번 사용자: ${id}</a>`
+                        console.log(str)
+                        num+=1
+                    }
+                    document.querySelector('#user').innerHTML+=str;
+                })
+                $.ajax({
                     url:"/battery",
                     async:false
                 })
@@ -90,7 +104,13 @@
                 <a href="javascript:location.href='/'" data-icon="home" data-dom-cache="false">Home</a>
                 <h1> Drone App </h1>
             </div>
-
+            <div data-role="collapsibleset" data-filter="true" data-inset="true" id="collapsiblesetForFilter" data-input="#searchForCollapsibleSet">
+                <div data-role="collapsible">
+                    <h3>사용자 등록 현황</h3>
+                    <ul data-role="listview" data-inset="false" id="user">
+                    </ul>
+                </div>
+            </div>
             <div data-role="content">
                 <div align="center">
                     <h1> Drone App </h1>
@@ -112,6 +132,7 @@
                 <ul data-role="listview">
                     <li><a href="javascript:location.href='/controller'">Controller</a></li>
                     <li><a href="javascript:location.href='/setting'">Setting</a></li>
+                    <li><a href="javascript:location.href='/regist'">User Regist</a></li>
                     <li><a href="javascript:location.href='/about'">about</a></li>
                 </ul>
             </div>
