--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -29,7 +29,7 @@
                     var num=1
                     var str=''
                     for(id in data){
-                        str+=`<a href="#" data-role="button" class="ui-link ui-btn ui-shadow ui-corner-all" onclick="return false">${num}번 사용자: ${id}</a>`
+                        str+=`<a href="#" data-role="button" class="ui-link ui-btn ui-shadow ui-corner-all" onclick="return false">사용자 ${num}: ${id}</a>`
                         console.log(str)
                         num+=1
                     }
