--- a/flask/templates/regist.html
+++ b/flask/templates/regist.html
@@ -11,6 +11,31 @@
                 text-align: center;
             }   
         </style>
+        <script>
+            $(()=>{
+                $.ajax({
+                    url:"/user_list",
+                    async:false
+                })
+                .done(function(data){
+                    if(data==0){
+                        return;
+                    }
+                    var str=''
+                    str += `<ul>`
+                    for(id in data){
+                        str += `<li style="display:inline-block; width:100px; height:100px; float:left; margin:30px;">`
+                        str += `<img src='../static/img/profile/${id}/profile.jpg' style="width:100px; height:100px; display:inline;">`
+                        str+=`<a href="#" data-role="button" class="ui-link ui-btn ui-shadow ui-corner-all user" onclick="return false" style="width:50px; margin-left:10px;">${id}</a>`
+                        str += `</li>`
+                    }
+                    str += `</ul>`
+                    str += `<br><br><br><br><br><br><br><br><br><br>`
+                    console.log(str)
+                    document.querySelector('#userlist').innerHTML+=str;
+                })
+            })
+        </script>
     </head>
     <body>
         <div data-role="page">
@@ -18,16 +43,19 @@
                 <a href="javascript:location.href='/'" data-icon="home" data-dom-cache="false">Home</a>
                 <h1> Drone App </h1>
             </div>
-
+            
             <div data-role="content">
                 <div class="setting-box">
-                    <h1>Regist & delete</h1>
+                    <h1>Regist & Delete</h1>
+                </div>
+                <br>
+                <div id="userlist" style="display:flex;justify-content:center;margin-bottom:30px;">
                 </div>
                 <br>
                 <ul data-role="listview">
                     <li><a href="javascript:location.href='/regist/regist_snapshot'">사용자 촬영 등록</a></li>
                     <li><a href="javascript:location.href='/regist/regist_fileupload'">사용자 사진 업로드 등록</a></li>
-                    <li><a href="javascript:location.href='/regist/regist_delete'">사용자 삭제</a></li>
+                    <li><a href="javascript:location.href='/regist/regist_del'">사용자 삭제</a></li>
                 </ul>
             </div>
         </div>
