--- a/flask/templates/setting.html
+++ b/flask/templates/setting.html
@@ -53,10 +53,7 @@
                     <div class="setting-box" style="text-align:left">
                         <h3>Google Drive</h3>
                     </div>
-                    <form action="http://localhost:9999/setting/get_credentials" method="post" enctype="multipart/form-data">
-                        <input type="file" name="file">
-                        <input type = "submit" value = "제출">
-                    </form>    
+                    <button type="button" onclick="location.href='get_credentials';"></button>  
                 </div>
                 <br><br>
                 <div class="setting-box" style="text-align:left">
