--- a/flask/templates/regist.html
+++ b/flask/templates/regist.html
@@ -46,7 +46,7 @@
             
             <div data-role="content">
                 <div class="setting-box">
-                    <h1>Regist & Delete</h1>
+                    <h1>Register & Delete</h1>
                 </div>
                 <br>
                 <div id="userlist" style="display:flex;justify-content:center;margin-bottom:30px;">
