--- a/flask/templates/regist_snapshot.html
+++ b/flask/templates/regist_snapshot.html
@@ -59,7 +59,7 @@
                 <form action="http://localhost:9999/setting/regist_snapshot" method="post" onSubmit="return form_submit()">
                     Name: <input type="text" name="user_name">
                     <a class = "click_button" href="/video/snapshot" data-role="button" onclick="return snapshot_check()">촬영</a>
-                    <input type="submit"  value="제출">
+                    <input type="submit"  value="등록">
                 </form>
             </div>
         </div>
