--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -69,10 +69,17 @@
             }
             .click_button{
                 position:absolute;
-                left:320px;
+                left:50%;
+                transform:translate(-50%,0%);
                 bottom:30px;
                 width:100px;
                 z-index:1;
+            }
+            .joystick div{
+                background:red;
+            }
+            .joystick2 div{
+                background:red;
             }
         </style>
     </head>
@@ -92,7 +99,7 @@
     <img id="drone_image" src="/video/streaming" style="float:left; width:100%; height:100%; object-fit: cover;">
     <div class="joystick_interface">
         <div data-jquery-element="joystick"></div>
-        <a class = "click_button" href="/video/snapshot" data-role="button">촬영</a>
+            <a class="click_button" href="/video/snapshot" data-role="button">촬영</a>
         <div data-jquery-element="joystick2"></div>
     </body>
 </html>
