--- a/flask/templates/controller.html
+++ b/flask/templates/controller.html
@@ -60,12 +60,16 @@
                 left:5px;
                 bottom:30px;
                 z-index:1;
+                opacity:1;
+                background:#58ffa6;
             }
             .joystick2{
                 position:absolute;
                 right:5px;
                 bottom:30px;
                 z-index:1;
+                opacity:1;
+                background:#58ffa6;
             }
             .click_button{
                 position:absolute;
@@ -76,10 +80,10 @@
                 z-index:1;
             }
             .joystick div{
-                background:red;
+                background:white;
             }
             .joystick2 div{
-                background:red;
+                background:white;
             }
         </style>
     </head>
