--- a/flask/templates/setting.html
+++ b/flask/templates/setting.html
@@ -53,7 +53,7 @@
                     <div class="setting-box" style="text-align:left">
                         <h3>Google Drive</h3>
                     </div>
-                    <button type="button" onclick="location.href='get_credentials';"></button>  
+                    <button type="button" onclick="location.href='get_credentials';">구글 드라이브 연동</button>  
                 </div>
                 <br><br>
                 <div class="setting-box" style="text-align:left">
