--- a/flask/templates/regist.html
+++ b/flask/templates/regist.html
@@ -49,7 +49,7 @@
                     <h1>Register & Delete</h1>
                 </div>
                 <br>
-                <div id="userlist" style="display:flex;justify-content:center;margin-bottom:30px;">
+                <div id="userlist" style="display:flex;justify-content:center;margin-bottom:30px;border:0px solid; background-color:#5b6dcd80; padding-bottom:30px; border-radius:30px">
                 </div>
                 <br>
                 <ul data-role="listview">
