--- a/flask/templates/regist_fileupload.html
+++ b/flask/templates/regist_fileupload.html
@@ -39,6 +39,9 @@
             </div>
 
             <div data-role="content">
+                <div class="setting-box">
+                    <h1>User Regist Page</h1>
+                </div>
                 <div class="setting-box" style="text-align:left">
                     <h3>User Regist-upload</h3>
                 </div>
