--- a/flask/templates/setting.html
+++ b/flask/templates/setting.html
@@ -49,6 +49,13 @@
                     <input type="range" name="slider-2" id="slider-2" data-highlight="true" min="10" max="100" value="50">
                 </form>
                 <br><br>
+                <form>
+                    <div class="setting-box" style="text-align:left">
+                        <h3>Drone Height</h3>
+                    </div>
+                    <input type="range" name="slider-2" id="slider-2" data-highlight="true" min="100" max="500" value="250">
+                </form>
+                <br><br>
                 <div class="wrap">
                     <div class="setting-box" style="text-align:left">
                         <h3>Google Drive</h3>
