--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -34,7 +34,7 @@
                     for(id in data){
                         str += `<li style="display:inline-block; width:100px; height:100px; float:left; margin:30px;">`
                         str += `<img src='../static/img/profile/${id}/profile.jpg' style="width:100px; height:100px; display:inline;">`
-                        str+=`<a href="#" data-role="button" class="ui-link ui-btn ui-shadow ui-corner-all user" onclick="return false" style="width:50px; margin-left:10px;">${id}</a>`
+                        str+=`<a href="#" data-role="button" class="ui-link ui-btn ui-shadow ui-corner-all user" onclick="location.href ='http://localhost:9999/user_select?name=${id}';" style="width:50px; margin-left:10px;">${id}</a>`
                         str += `</li>`
                     }
                     str += `</ul>`
